[tool.poetry]
name = "seqtypo"
version = "0.1.0"
description = ""
authors = ["Iván Bloise <ibloise62@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.2"
biopython = "^1.84"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
