[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqtypo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Iván Bloise", email = "ibloise62@gmail.com" }]
dependencies = [
  "requests>=2.32.3,<3",
  "pandas>=2.2.2,<3",
  "biopython>=1.84,<2",
  "pydantic>=2.8.2,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2,<9",
  "pytest-cov>=5.0.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["seqtypo*"]
